; ModuleID = '/home/carl/AnghaBench/libgit2/src/xdiff/extr_xemit.c_is_func_rec.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/xdiff/extr_xemit.c_is_func_rec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i64)* @is_func_rec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_func_rec(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca [1 x i8], align 1
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = getelementptr inbounds [1 x i8], [1 x i8]* %7, i64 0, i64 0
  %12 = call i64 @match_func_rec(i32* %8, i32* %9, i64 %10, i8* %11, i32 1)
  %13 = icmp sge i64 %12, 0
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i64 @match_func_rec(i32*, i32*, i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
